# SKIBCY

./: CMakeLists.txt  LICENSE  README.md  combinator.g4  convert.cpp  header.h  skibcy.cpp  skibcy.h  test1.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt
